test/corpus/apply.txt
================================================================================
apply expression
================================================================================
fn init {
  f(1)
  f(1, 2, 3)
  (0).f(4)
  a.f(4)
  a..f(4)
  (0)..f(4)
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (tuple_expression
                        (expression
                          (pipeline_expression
                            (compound_expression
                              (simple_expression
                                (atomic_expression
                                  (literal
                                    (integer_literal)))))))))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (tuple_expression
                        (expression
                          (pipeline_expression
                            (compound_expression
                              (simple_expression
                                (atomic_expression
                                  (literal
                                    (integer_literal)))))))))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))))))

================================================================================
apply expression with labeled argument
================================================================================
fn init {
  f(1, dim=4)
  f(1, dim~)
  f(1, dim=4)
  f(1, dim?=None)
  f(1, g?(3))
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier))))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_pun
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier))))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))
                        (question_operator))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (constructor_expression
                                (uppercase_identifier)))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (apply_expression
                                (simple_expression
                                  (qualified_identifier
                                    (lowercase_identifier)))
                                (apply_operator
                                  (question_operator))
                                (argument
                                  (expression
                                    (pipeline_expression
                                      (compound_expression
                                        (simple_expression
                                          (atomic_expression
                                            (literal
                                              (integer_literal))))))))))))))))))))))))

================================================================================
dot apply with labeled argument
================================================================================
fn main {
  a.f(2, dim=4)
  a.f(2, dim~)
  a.f(2, dim=4)
  a.f(2, dim?=None)
  a.f(2, g?(4))
  logger
  .write_string(self.denominator.to_string())
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier))))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_pun
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier))))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))
                        (question_operator))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (constructor_expression
                                (uppercase_identifier)))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (apply_expression
                                (simple_expression
                                  (qualified_identifier
                                    (lowercase_identifier)))
                                (apply_operator
                                  (question_operator))
                                (argument
                                  (expression
                                    (pipeline_expression
                                      (compound_expression
                                        (simple_expression
                                          (atomic_expression
                                            (literal
                                              (integer_literal))))))))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_identifier
                      (dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (dot_apply_expression
                                (simple_expression
                                  (access_expression
                                    (simple_expression
                                      (qualified_identifier
                                        (lowercase_identifier)))
                                    (accessor
                                      (dot_identifier
                                        (dot)))))
                                (dot_identifier
                                  (dot))))))))))))))))))

================================================================================
dot apply with labeled argument
================================================================================
fn main {
  a..f(2, dim=4)
  a..f(2, dim~)
  a..f(2, dim=4)
  a..f(2, dim?=None)
  a..f(2, g?(4))
  logger
  ..write_string(self.numerator.to_string())
  ..write_string("/")
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier))))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_pun
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier))))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (argument_label
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))
                        (question_operator))
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (constructor_expression
                                (uppercase_identifier)))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (qualified_identifier
                        (lowercase_identifier)))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (integer_literal))))))))
                    (comma)
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (apply_expression
                                (simple_expression
                                  (qualified_identifier
                                    (lowercase_identifier)))
                                (apply_operator
                                  (question_operator))
                                (argument
                                  (expression
                                    (pipeline_expression
                                      (compound_expression
                                        (simple_expression
                                          (atomic_expression
                                            (literal
                                              (integer_literal))))))))))))))))))))
        (statement_expression
          (expression
            (pipeline_expression
              (compound_expression
                (simple_expression
                  (dot_dot_apply_expression
                    (simple_expression
                      (dot_dot_apply_expression
                        (simple_expression
                          (qualified_identifier
                            (lowercase_identifier)))
                        (dot_dot_identifier
                          (dot_dot))
                        (argument
                          (expression
                            (pipeline_expression
                              (compound_expression
                                (simple_expression
                                  (dot_apply_expression
                                    (simple_expression
                                      (access_expression
                                        (simple_expression
                                          (qualified_identifier
                                            (lowercase_identifier)))
                                        (accessor
                                          (dot_identifier
                                            (dot)))))
                                    (dot_identifier
                                      (dot))))))))))
                    (dot_dot_identifier
                      (dot_dot))
                    (argument
                      (expression
                        (pipeline_expression
                          (compound_expression
                            (simple_expression
                              (atomic_expression
                                (literal
                                  (string_literal
                                    (string_fragment
                                      (unescaped_string_fragment))))))))))))))))))))
